<resources>
    <string name="app_name">banko</string>
    <string name="sign_up">Sign up</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login_button">Log in</string>
    <string name="create_account">Create account</string>
    <string name="or">OR</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="success">Success</string>
    <string name="new_balance">New Balance</string>
    <string name="deposit">Deposit</string>


</resources>